<resources>
    <string name="app_name">FigmaDoctor</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="your_friendly_dental_friend">Your friendly Dental Friend</string>
    <string name="dental_surgeon">Dental surgeon</string>
    <string name="dr_oleg_mayami">Dr. Oleg Mayami</string>
    <string name="whatsapp_me">WhatsApp Me</string>
    <string name="www_dental_com">www.dental.com</string>
    <string name="save_to_phonebook">Save to phonebook</string>
    <string name="abdumomunova_146">Abdumomunova 146</string>
    <string name="email">oleg.mayami93@gmail.com</string>
    <string name="dr_oleg_mayami_page2">Dr. Oleg Mayami</string>
    <string name="text_the_doctor">Text the doctor</string>
    <string name="call_the_doctor">Call the doctor</string>
    <string name="email_the_doctor">Email the doctor</string>
    <string name="scan_to_connect">Scan To Connect</string>
    <string name="email_page2">oleg.mayami93@gmail.com</string>
    <string name="phone_number_page2">+996 (774) 678 876</string>
    <string name="instagram_button">Isntagram Button</string>
    <string name="linkedin_button">LinkedIn Button</string>
    <string name="facebook_button">FaceBook Button</string>
    <string name="qr_code_to_connect">QR-Code to connect</string>
    <string name="address">Abdumomunova 146</string>
    <string name="site">www.dental.com</string>
    <string name="background_image">Background Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="open_map">Open map</string>
    <string name="save_contact">Save contact</string>
    <string name="telegram">Telegram</string>
    <string name="visit_website">Visit website</string>
    <string name="email_us">Email us</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="to_call">To Call</string>
    <string name="view_status">View status</string>
</resources>