<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".BusinessCard3">


        <ImageView
            android:id="@+id/background_image"
            android:layout_width="412dp"
            android:layout_height="285dp"
            android:background="@drawable/main_image"
            android:cacheColorHint="#00000000"
            android:contentDescription="@string/background_image"
            android:drawSelectorOnTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/transparent_gradient" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="15dp"
            app:contentPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dr_oleg_may_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_horizontal|fill_vertical"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/dr_oleg_mayami_page2"
                    android:textColor="#1A82FC"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/text_floating_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/email_the_doctor"
                    android:focusable="true"
                    app:backgroundTint="#1A82FC"
                    app:elevation="0dp"
                    app:layout_constraintEnd_toStartOf="@+id/text_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dr_oleg_may_2"
                    app:srcCompat="@drawable/text_icon" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/call_the_doctor"
                    android:focusable="true"
                    app:backgroundTint="#1A82FC"
                    app:elevation="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/text_button"
                    app:layout_constraintTop_toTopOf="@+id/text_button"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/vector"
                    tools:ignore="ImageContrastCheck" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/text_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/text_the_doctor"
                    android:focusable="true"
                    app:backgroundTint="#1A82FC"
                    app:elevation="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_floating_button"
                    app:layout_constraintEnd_toStartOf="@+id/email_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/text_floating_button"
                    app:layout_constraintTop_toTopOf="@+id/text_floating_button"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/icon_color"
                    tools:ignore="ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="90dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="90dp"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintBottom_toBottomOf="@+id/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_image"
            android:src="@drawable/oleg_photo"
            tools:ignore="ImageContrastCheck"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/site_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="16dp"
            app:contentPadding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qr_code">

            <TextView
                android:id="@+id/site_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_vertical|start"
                android:backgroundTint="#FF0000"
                android:drawableStart="@drawable/site"
                android:drawablePadding="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/site"
                android:textColor="#3E3D3D" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/address_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="16dp"
            app:contentPadding="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/site_card">

            <TextView
                android:id="@+id/address_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start|center_vertical"
                android:drawableStart="@drawable/address"
                android:drawablePadding="8dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/address"
                android:textColor="#3E3D3D" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/qr_code_to_connect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_card"
            app:srcCompat="@drawable/scan" />

        <TextView
            android:id="@+id/scan_to_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/scan_to_connect"
            android:textColor="#3E3D3D"
            app:layout_constraintBottom_toTopOf="@+id/phone_number_page2"
            app:layout_constraintStart_toEndOf="@+id/qr_code"
            app:layout_constraintStart_toStartOf="@+id/phone_number_page2"
            app:layout_constraintTop_toTopOf="@+id/qr_code" />

        <TextView
            android:id="@+id/email_page2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/email_page2"
            android:textColor="#3E3D3D"
            app:layout_constraintBottom_toBottomOf="@+id/qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qr_code"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_page2" />

        <TextView
            android:id="@+id/phone_number_page2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/phone_number_page2"
            android:textColor="#1A82FC"
            app:layout_constraintBottom_toTopOf="@+id/email_page2"
            app:layout_constraintStart_toEndOf="@+id/qr_code"
            app:layout_constraintStart_toStartOf="@+id/email_page2"
            app:layout_constraintTop_toBottomOf="@+id/scan_to_connect" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/facebook_button"
            android:focusable="true"
            android:src="@drawable/facebook_icon"
            app:backgroundTint="#1A82FC"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/instagram_button"
            app:layout_constraintEnd_toStartOf="@+id/linkedin_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/instagram_button"
            app:layout_constraintTop_toTopOf="@+id/instagram_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/instagram_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:contentDescription="@string/instagram_button"
            android:focusable="true"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:backgroundTint="#1A82FC"
            app:elevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/facebook_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/address_card"
            app:layout_constraintTop_toBottomOf="@+id/address_card" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/linkedin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/linkedin_button"
            android:focusable="true"
            android:src="@drawable/linkedin"
            app:backgroundTint="#1A82FC"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_button"
            app:layout_constraintEnd_toEndOf="@+id/address_card"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/facebook_button"
            app:layout_constraintTop_toTopOf="@+id/facebook_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>