<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BusinessCard1">

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/abdumomunova_146"
        android:textColor="#3E3D3D"
        app:layout_constraintBottom_toBottomOf="@+id/address_img"
        app:layout_constraintStart_toEndOf="@+id/address_img"
        app:layout_constraintTop_toTopOf="@+id/address_img" />

    <TextView
        android:id="@+id/phonebook_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/save_to_phonebook"
        android:textColor="#3E3D3D"
        app:layout_constraintBottom_toBottomOf="@+id/phonebook_img"
        app:layout_constraintStart_toEndOf="@+id/phonebook_img"
        app:layout_constraintTop_toTopOf="@+id/phonebook_img" />

    <TextView
        android:id="@+id/whatsapp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/whatsapp_me"
        android:textColor="#3E3D3D"
        app:layout_constraintBottom_toBottomOf="@+id/whatsapp_img"
        app:layout_constraintStart_toEndOf="@+id/whatsapp_img"
        app:layout_constraintTop_toTopOf="@+id/whatsapp_img" />

    <TextView
        android:id="@+id/website_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/www_dental_com"
        android:textColor="#3E3D3D"
        app:layout_constraintBottom_toBottomOf="@+id/website_img"
        app:layout_constraintStart_toEndOf="@+id/website_img"
        app:layout_constraintTop_toTopOf="@+id/website_img" />

    <TextView
        android:id="@+id/dr_oleg_may"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/dr_oleg_mayami"
        android:textColor=" #000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/page_1_oleg_photo"
        app:layout_constraintTop_toBottomOf="@+id/page_1_main_image"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/page_1_main_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_image" />

    <ImageView
        android:id="@+id/page_1_oleg_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_1_main_image"
        app:srcCompat="@drawable/oleg_photo" />

    <TextView
        android:id="@+id/dental_surg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/dental_surgeon"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/your_friend"
        app:layout_constraintEnd_toEndOf="@+id/dr_oleg_may"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dr_oleg_may"
        app:layout_constraintTop_toBottomOf="@+id/dr_oleg_may" />

    <TextView
        android:id="@+id/your_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/your_friendly_dental_friend"
        android:textColor=" #000000"
        app:layout_constraintBottom_toBottomOf="@+id/page_1_oleg_photo"
        app:layout_constraintEnd_toEndOf="@+id/dr_oleg_may"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dr_oleg_may" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/dental_surg"
        app:layout_constraintEnd_toEndOf="@+id/dr_oleg_may"
        app:layout_constraintStart_toStartOf="@+id/dr_oleg_may"
        app:layout_constraintTop_toBottomOf="@+id/dr_oleg_may"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/make_an_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="27dp"
        android:backgroundTint="#01B2AA"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/make_an_appointment"
        android:textAllCaps="false"
        android:theme="@style/Button.Teal"
        app:cornerRadius="4dp"
        app:icon="@drawable/icon_color"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_1_oleg_photo"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/emile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/make_an_app"
        app:layout_constraintTop_toBottomOf="@+id/make_an_app"
        app:srcCompat="@drawable/vector"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/website_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/emile_img"
        app:layout_constraintTop_toBottomOf="@+id/emile_img"
        app:srcCompat="@drawable/site"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/whatsapp_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/website_img"
        app:layout_constraintTop_toBottomOf="@+id/website_img"
        app:srcCompat="@drawable/whatsapp" />

    <ImageView
        android:id="@+id/phonebook_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/whatsapp_img"
        app:layout_constraintTop_toBottomOf="@+id/whatsapp_img"
        app:srcCompat="@drawable/phonebook" />

    <ImageView
        android:id="@+id/address_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/phonebook_img"
        app:layout_constraintTop_toBottomOf="@+id/phonebook_img"
        app:srcCompat="@drawable/address" />

    <TextView
        android:id="@+id/email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/email"
        android:textColor="#3E3D3D"
        app:layout_constraintBottom_toBottomOf="@+id/emile_img"
        app:layout_constraintStart_toEndOf="@+id/emile_img"
        app:layout_constraintTop_toTopOf="@+id/emile_img" />


</androidx.constraintlayout.widget.ConstraintLayout>